# ncnn-mtcnn-facenet

./: README.md
MacOS/: CMakeLists.txt
MacOS/src/: main.cpp  mobilefacenet.cpp  mobilefacenet.h  mtcnn.cpp
iOS/FunAlbum/: AppDelegate.swift  DetectionViewController.swift  FunAlbum-Bridging-Header.h  Info.plist  MainViewController.swift  NCNNWrapper.h  NCNNWrapper.mm  PrefixHeader.pch
iOS/FunAlbum.xcodeproj/: project.pbxproj
iOS/FunAlbum.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/FunAlbum.xcodeproj/project.xcworkspace/xcuserdata/jinbinxie.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/FunAlbum.xcodeproj/xcuserdata/jinbinxie.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/FunAlbum/Base.lproj/: Main.storyboard
iOS/FunAlbumTests/: FunAlbumTests.swift
iOS/FunAlbumUITests/: FunAlbumUITests.swift
src/: mtcnn.h
